--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <nav class="flex justify-between items-center">
+
+<!-- Navbar start -->
+    <nav class="flex justify-between items-center ">
         <div class="flex gap-4 ml-[60px]  ">
             <div class="h-[50px] w-[50px] mt-6 mb-6" ><img src="assets/logo.png" alt="" ></div>
             
@@ -33,7 +35,19 @@
 
         </div>
     </nav>
+<!-- Navbar End -->
 
+<!-- Banner start -->
+<div class="bg-[linear-gradient(to_right,rgba(1,50,35,1),rgba(0,103,71,1),rgba(1,50,35,1))] w-full h-[240px] flex flex-col items-center justify-center">
+    <img src="assets/logo-dark.png" alt="" class="h-[92px]">
+    <h1 class="font-bold text-[40px] text-white">Emergency Service Directory</h1>
+    <p class="text-white text-[20px] md:text-[12px] ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+
+</div>
+
+
+
+<!-- Banner end -->
 
 
 </body>
