--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="text-[#006747] font-bold text-2xl mt-4 mb-6 ">Emergency <br> Service</h1>
         </div>
 
-        <div class="flex justify-between gap-[20px] mt-[10px] sm:w-full">
+        <div class="flex justify-between gap-[20px] mt-[10px]">
             <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 px-[36px] py-[14px] rounded-[50px]">
                 <p class="font-bold">0</p>
                 <img src="assets/heart.png" alt="" class="h-[24px] w-[24px]">
@@ -36,7 +36,7 @@
 <!-- Navbar End -->
 
 <!-- Banner start -->
-<div class="bg-[linear-gradient(to_right,rgba(1,50,35,1),rgba(0,103,71,1),rgba(1,50,35,1))] w-full h-[240px] flex flex-col items-center justify-center">
+<div class="bg-[linear-gradient(to_right,rgba(1,50,35,1),rgba(0,103,71,1),rgba(1,50,35,1))] w-full h-[240px] flex flex-col items-center justify-center sm:w-full">
     <img src="assets/logo-dark.png" alt="" class="h-[92px]">
     <h1 class="font-bold text-[40px] text-white">Emergency Service Directory</h1>
     <p class="text-white text-[20px] sm:text-[12px] ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
