--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
 
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">National Emergency Number</h1>
 <p class="text-[16px] text-[#5c5c5c] ">National Emergency</p>
 <h1 class="text-[25px] font-bold">999</h1>
@@ -84,7 +89,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/police.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/police.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semiNationalbold mt-[16px]">Police Helpline Number</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Police</p>
 <h1 class="text-[25px] font-bold">999</h1>
@@ -97,7 +107,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/fire-service.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/fire-service.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Fire Service Number</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Fire Service</p>
 <h1 class="text-[25px] font-bold">999</h1>
@@ -110,7 +125,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/ambulance.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/ambulance.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Ambulance Service</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Ambulance</p>
 <h1 class="text-[25px] font-bold">1994-999999</h1>
@@ -123,7 +143,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Women & Child Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Women & Child Helpline</p>
 <h1 class="text-[25px] font-bold">109</h1>
@@ -136,7 +161,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Anti-Corruption Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Anti-Corruption</p>
 <h1 class="text-[25px] font-bold">106</h1>
@@ -149,7 +179,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Electricity Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Electricity Outage</p>
 <h1 class="text-[25px] font-bold">16216</h1>
@@ -162,7 +197,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/brac.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/brac.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Brac Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Brac</p>
 <h1 class="text-[25px] font-bold">16445</h1>
@@ -175,7 +215,12 @@
     </div>
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
-<img src="assets/Bangladesh-Railway.png" alt="" class="h-[32px] w-[32px]">
+<div class="flex justify-between">
+    <img src="assets/Bangladesh-Railway.png" alt="" class="h-[32px] w-[32px]">
+    <div class="text-gray-">
+        <i class="fa-regular fa-heart"></i>
+    </div>
+</div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Bangladesh Railway Helpline </h1>
 <p class="text-[16px] text-[#5c5c5c] ">Bangladesh Railway</p>
 <h1 class="text-[25px] font-bold">163</h1>
