--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="flex justify-between gap-[20px] mt-[10px]">
             <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 px-[36px] py-[14px] rounded-[50px] sm:px-[30px]">
-                <p class="font-bold">0</p>
+                <p class="font-bold" id="heart-count">0</p>
                 <img src="assets/heart.png" alt="" class="h-[24px] w-[24px]">
             </div>
 
@@ -73,7 +73,7 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
+    <div class="heart-icon text-gray-400">
         <i class="fa-regular fa-heart"></i>
     </div>
 </div>
@@ -91,8 +91,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/police.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semiNationalbold mt-[16px]">Police Helpline Number</h1>
@@ -109,8 +109,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/fire-service.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Fire Service Number</h1>
@@ -127,8 +127,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/ambulance.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Ambulance Service</h1>
@@ -145,8 +145,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Women & Child Helpline</h1>
@@ -163,8 +163,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Anti-Corruption Helpline</h1>
@@ -181,8 +181,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Electricity Helpline</h1>
@@ -199,8 +199,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/brac.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Brac Helpline</h1>
@@ -217,8 +217,8 @@
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
 <div class="flex justify-between">
     <img src="assets/Bangladesh-Railway.png" alt="" class="h-[32px] w-[32px]">
-    <div class="text-gray-">
-        <i class="fa-regular fa-heart"></i>
+    <div class="text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
 <h1 class="text-[20px] font-semibold mt-[16px]">Bangladesh Railway Helpline </h1>
@@ -252,6 +252,6 @@
 
 </section>
 
-
+<script src="js/main.js"></script>
 </body>
 </html>
