--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             </div>
 
             <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 px-[36px] py-[14px] rounded-[50px] sm:px-[20px] ">
-                <p class="font-bold">100</p>
+                <p class="font-bold" id="coins">100</p>
                 <img src="assets/coin.png" alt="" class="h-[24px] w-[24px]">
             </div>
 
             <div class="flex gap-[10px] bg-[#00A63E] rounded-[50px] text-white px-[36px] py-[14px] mr-[60px] sm:mr-[20px] sm:px-[20px] " >
-                <span>0</span> 
+                <p id="copy-count">2</p> 
                 <p>Copy</p></div>
         </div>
             
@@ -70,165 +70,165 @@
 <div id="services" class=" col-span-9 grid grid-cols-3 gap-[30px]">
 
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
-    <div class="heart-icon text-gray-400">
-        <i class="fa-regular fa-heart"></i>
+    <div class=" text-gray-400">
+        <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">National Emergency Number</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">National Emergency Number</h1>
 <p class="text-[16px] text-[#5c5c5c] ">National Emergency</p>
-<h1 class="text-[25px] font-bold">999</h1>
+<h1 class="text-[25px] font-bold service-number">999</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">All</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/police.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semiNationalbold mt-[16px]">Police Helpline Number</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Police Helpline Number</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Police</p>
-<h1 class="text-[25px] font-bold">999</h1>
+<h1 class="text-[25px] font-bold service-number">999</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Police</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/fire-service.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Fire Service Number</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Fire Service Number</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Fire Service</p>
-<h1 class="text-[25px] font-bold">999</h1>
+<h1 class="text-[25px] font-bold service-number">999</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Fire</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/ambulance.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Ambulance Service</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Ambulance Service</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Ambulance</p>
-<h1 class="text-[25px] font-bold">1994-999999</h1>
+<h1 class="text-[25px] font-bold service-number">1994-999999</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[65px] h-[37px] text-center items-center mb-[20px]">Health</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Women & Child Helpline</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Women & Child Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Women & Child Helpline</p>
-<h1 class="text-[25px] font-bold">109</h1>
+<h1 class="text-[25px] font-bold service-number">109</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Help</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Anti-Corruption Helpline</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Anti-Corruption Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Anti-Corruption</p>
-<h1 class="text-[25px] font-bold">106</h1>
+<h1 class="text-[25px] font-bold service-number">106</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Govt.</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Electricity Helpline</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Electricity Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Electricity Outage</p>
-<h1 class="text-[25px] font-bold">16216</h1>
+<h1 class="text-[25px] font-bold service-number">16216</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[85px] h-[37px] text-center items-center mb-[20px]">Electricity</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/brac.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Brac Helpline</h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Brac Helpline</h1>
 <p class="text-[16px] text-[#5c5c5c] ">Brac</p>
-<h1 class="text-[25px] font-bold">16445</h1>
+<h1 class="text-[25px] font-bold service-number ">16445</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[60px] h-[37px] text-center items-center mb-[20px]">NGO</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px]">
+    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/Bangladesh-Railway.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
         <i class="heart-icon fa-regular fa-heart"></i>
     </div>
 </div>
-<h1 class="text-[20px] font-semibold mt-[16px]">Bangladesh Railway Helpline </h1>
+<h1 class="text-[20px] font-semibold mt-[16px] service-title">Bangladesh Railway Helpline </h1>
 <p class="text-[16px] text-[#5c5c5c] ">Bangladesh Railway</p>
-<h1 class="text-[25px] font-bold">163</h1>
+<h1 class="text-[25px] font-bold service-number">163</h1>
 <p class="bg-[#f2f2f2] rounded-[999px] w-[60px] h-[25px] text-center items-center mb-[20px]">Travel</p>
 
 <div class="flex gap-2 justify-between">
-<button class="border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class=" bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
