--- a/JS/js.html
+++ b/JS/js.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+       <!-- Tailwind and DaisyUI CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+<!-- Font-Hind Madhuri Link -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- Font Awesome CDN -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    <div class="container">
-        <h1>Chilli</h1>
-        <p>100</p>
-        <button>Get Chilli</button>
-
+ <div>
+    <div class="flex justify-between">
+        <h1 class="text-[18px] font-semibold ">Service Title</h1>
+        <p class="text-[#5C5C5C] text-[14px]">999</p>
     </div>
-
-    <div class="container">
-        <h1>Apple</h1>
-        <p>300</p>
-        <button>Get Apple</button>
-    </div>
-
-   
+    <p>time</p>
+ </div>
 
 
     <script src="js.js"></script>
