javascript file path fixed

--- a/index.html
+++ b/index.html
@@ -250,15 +250,10 @@
 
  </div>
 
-
-
-
-
-    
 <!-- call history end -->
 
 </section>
 
-<script src="js/main.js"></script>
+<script src="./JS/main.js"></script>
 </body>
 </html>
