clear button feature added

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <div class="flex justify-between p-6">
 <h1 class="text-lg"><i class="fa-solid fa-clock"></i> Call History</h1>
-<button class=" bg-[#00A63E] rounded-4xl px-[25px] py-1.5 text-white">Clear</button>
+<button class=" bg-[#00A63E] rounded-4xl px-[25px] py-1.5 text-white" id="clear-btn">Clear</button>
     </div>
 
  </div>
