final commit for large screen

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
 <!-- Banner end -->
 
 <!-- card section start -->
-<section class=" w-11/12 bg-[#f5fff6] mx-auto grid grid-cols-12 gap-7 py-9 ">
+<section class=" bg-[#f5fff6] ">
 
+
+    <div class="w-11/12 mx-auto grid grid-cols-12 gap-7 py-9 ">
 <!-- cards start-->
 <div id="services" class=" col-span-9 grid grid-cols-3 gap-[30px]">
 
@@ -251,7 +253,7 @@
  </div>
 
 <!-- call history end -->
-
+</div>
 </section>
 
 <script src="./JS/main.js"></script>
