--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 <body> 
 
 <!-- Navbar start -->
-    <nav class="flex justify-between items-center sm:gap[10px]">
-        <div class="flex gap-3 ml-[60px] sm:ml-[20px] ">
-            <div class="h-[50px] w-[50px] mt-6 mb-6" ><img src="assets/logo.png" alt="" ></div>
+    <nav class="flex justify-between items-center  ">
+        <div class="flex gap-3 ml-[20px] lg:ml-[60px] ">
+            <div class="h-[30px] w-[30px] lg:h-[50px] lg:w-[50px] mt-6 mb-6 sm:ml-[0px]" ><img src="assets/logo.png" alt="" class=""></div>
             
-            <h1 class="text-[#006747] font-bold text-2xl mt-4 mb-6 sm:text-xl">Emergency <br> Service</h1>
+            <h1 class="text-[#006747] text-[12px] font-bold lg:text-2xl mt-5 mb-6 ">Emergency <br> Service</h1>
         </div>
 
-        <div class="flex justify-between gap-[20px] mt-[10px]">
-            <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 px-[36px] py-[14px] rounded-[50px] sm:px-[30px]">
+        <div class="flex justify-between gap-[10px] mt-[10px] mr-[20px] lg:mr-[0px] ">
+            <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10  rounded-[50px] px-[18px] py-[10px] lg:px-[30px] lg:py-[18px]">
                 <p class="font-bold" id="heart-count">0</p>
-                <img src="assets/heart.png" alt="" class="h-[24px] w-[24px]">
+                <img src="assets/heart.png" alt="" class="lg:h-[24px] lg:w-[24px] h-[20px] w-[20px]">
             </div>
 
-            <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 px-[36px] py-[14px] rounded-[50px] sm:px-[20px] ">
+            <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 rounded-[50px] px-3 py-2 lg:px-[25px] lg:py-[14px]">
                 <p class="font-bold" id="coins">100</p>
-                <img src="assets/coin.png" alt="" class="h-[24px] w-[24px]">
+                <img src="assets/coin.png" alt="" class="lg:h-[24px] lg:w-[24px] h-[20px] w-[20px]">
             </div>
 
-            <div class="flex gap-[10px] bg-[#00A63E] rounded-[50px] text-white px-[36px] py-[14px] mr-[60px] sm:mr-[20px] sm:px-[20px] " >
+            <div class="flex gap-[10px] bg-[#00A63E] lg:rounded-[50px] rounded-[30px] text-white  lg:mr-[60px]  px-[10px] py-[12px] lg:px-[25px] lg:-[14px] text-[13px] lg:text-[16px]" >
                 <p id="copy-count">2</p> 
                 <p>Copy</p></div>
         </div>
@@ -55,11 +55,10 @@
 <!-- Navbar End -->
 
 <!-- Banner start -->
-<section class="bg-[linear-gradient(to_right,rgba(1,50,35,1),rgba(0,103,71,1),rgba(1,50,35,1))] w-full h-[240px] flex flex-col items-center justify-center sm:w-full">
-    <img src="assets/logo-dark.png" alt="" class="h-[92px]">
-    <h1 class="font-bold text-[40px] text-white">Emergency Service Directory</h1>
-    <p class="text-white text-[20px] sm:text-[12px] ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
-
+<section class="bg-[linear-gradient(to_right,rgba(1,50,35,1),rgba(0,103,71,1),rgba(1,50,35,1))] lg:h-[240px] h-[180px] flex flex-col items-center w-full justify-center ">
+    <img src="assets/logo-dark.png" alt="" class="lg:h-[92px] h-[60px]">
+    <h1 class="font-bold lg:text-[40px] text-[20px] text-white">Emergency Service Directory</h1>
+    <p class="text-white lg:text-[20px] text-[12px] px-[9px]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
 </section>
 <!-- Banner end -->
 
@@ -67,9 +66,9 @@
 <section class=" bg-[#f5fff6] ">
 
 
-    <div class="w-11/12 mx-auto grid grid-cols-12 gap-7 py-9 ">
+    <div class="w-11/12 mx-auto lg:grid lg:grid-cols-12 gap-7 py-9 px-9">
 <!-- cards start-->
-<div id="services" class=" col-span-9 grid grid-cols-3 gap-[30px]">
+<div id="services" class=" col-span-9 grid lg:grid-cols-3 gap-[30px] grid-cols-1">
 
 
     <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
@@ -243,7 +242,7 @@
 
 
 <!-- call history start -->
-<div id="call-history" class="card bg-base-100 card-lg shadow-sm col-span-3 ">
+<div id="call-history" class="card bg-base-100 card-lg shadow-sm col-span-3 mt-8 lg:mt-[0px]">
 
     <div class="flex justify-between p-6">
 <h1 class="text-lg"><i class="fa-solid fa-clock"></i> Call History</h1>
