--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div id="services" class=" col-span-9 grid lg:grid-cols-3 gap-[30px] grid-cols-1">
 
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class=" text-gray-400">
@@ -89,7 +89,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/police.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -107,7 +107,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/fire-service.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -125,7 +125,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/ambulance.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -143,7 +143,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -161,7 +161,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -179,7 +179,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/emergency.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -197,7 +197,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/brac.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
@@ -215,7 +215,7 @@
 </div>   
     </div>
 
-    <div class="card w-[320px] h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
+    <div class="card lg:w-[320px] lg:h-[280px] bg-base-100 card-lg shadow-sm px-[32px] py-[32px] card-container">
 <div class="flex justify-between">
     <img src="assets/Bangladesh-Railway.png" alt="" class="h-[32px] w-[32px]">
     <div class="text-gray-400">
