card  button responsiveness fixed

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">All</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -102,8 +102,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Police</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -120,8 +120,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Fire</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -138,8 +138,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[65px] h-[37px] text-center items-center mb-[20px]">Health</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -156,8 +156,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Help</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -174,8 +174,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[53px] h-[37px] text-center items-center mb-[20px]">Govt.</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -192,8 +192,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[85px] h-[37px] text-center items-center mb-[20px]">Electricity</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -210,8 +210,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[60px] h-[37px] text-center items-center mb-[20px]">NGO</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
@@ -228,8 +228,8 @@
 <p class="bg-[#f2f2f2] rounded-[999px] w-[60px] h-[25px] text-center items-center mb-[20px]">Travel</p>
 
 <div class="flex gap-2 justify-between">
-<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
-<button class="call-btn bg-[#00A63E] rounded-[8px] px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
+<button class="copy-btn border-1 border-gray-300 rounded-[8px] px-[20px] lg:px-[35px] py-1 text-[#5C5C5C]"><i class="fa-solid fa-copy"></i>Copy</button>
+<button class="call-btn bg-[#00A63E] rounded-[8px] px-[20px] lg:px-[35px] py-1 text-white"><i class="fa-solid fa-phone"></i>Call</button>
 </div>   
     </div>
 
