--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <img src="assets/heart.png" alt="" class="lg:h-[24px] lg:w-[24px] h-[20px] w-[20px]">
             </div>
 
-            <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 rounded-[50px] px-3 py-2 lg:px-[25px] lg:py-[14px]">
+            <div class="flex gap-[10px] bg-[#41FF6B1A] bg-opacity-10 rounded-[50px] px-[18px] py-[10px] lg:px-[25px] lg:py-[14px]">
                 <p class="font-bold" id="coins">100</p>
                 <img src="assets/coin.png" alt="" class="lg:h-[24px] lg:w-[24px] h-[20px] w-[20px]">
             </div>
 
-            <div class="flex gap-[10px] bg-[#00A63E] lg:rounded-[50px] rounded-[30px] text-white  lg:mr-[60px]  px-[25px] py-[14px] lg:px-[25px] lg:-[14px] text-[13px] lg:text-[16px]" >
+            <div class="flex gap-[10px] bg-[#00A63E] lg:rounded-[50px] rounded-[30px] text-white  lg:mr-[60px] px-3 py-3 lg:px-[25px] lg:-[14px] text-[12px] lg:text-[16px]" >
                 <p id="copy-count">2</p> 
                 <p>Copy</p></div>
         </div>
